@@ -43,10 +43,10 @@ class CategoriesHelper
 				if (is_callable(array($cName, 'addSubmenu')))
 				{
  					$lang = &JFactory::getLanguage();
-					// loading language file from the administrator/language directory
- 					$lang->load($extension);
 					// loading language file from the administrator/components/*extension*/language directory
 					$lang->load($extension, JPath::clean(JPATH_ADMINISTRATOR.'/components/'.$extension));
+					// loading language file from the administrator/language directory
+ 					$lang->load($extension);
  					call_user_func(array($cName, 'addSubmenu'), 'categories');
 				}
 			}
