@@ -64,6 +64,7 @@ class CategoriesViewCategories extends JView
 
 		// Need to load the menu language file as mod_menu hasn't been loaded yet.
 		$lang = &JFactory::getLanguage();
+		$lang->load($extension.'.menu',JPATH_ADMINISTRATOR.'/components/'.$extension);
 		$lang->load($extension.'.menu');
 
 		JToolBarHelper::title(
