@@ -116,11 +116,11 @@ abstract class ModMenuHelper
 		// Load additional language files.
 		foreach (array_keys($langs) as $langName)
 		{
-			// Load the core file.
-			$lang->load($langName);
-
 			// Load extension-local file.
 			$lang->load('menu', JPATH_ADMINISTRATOR.'/components/'.str_replace('.menu', '', $langName));
+
+			// Load the core file.
+			$lang->load($langName);
 		}
 
 		return $result;
